force-app/main/default/objects/Account/fields/Days_Since_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Activity__c</fullName>
    <formula>TODAY() - LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Custom Formula Field that calculates the days since the Last Activity Date</inlineHelpText>
    <label>Days Since Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>