force-app/main/default/objects/Account/fields/Fund_Info_Reporting_10__c.field-meta.xml
<CustomField>
    <fullName>Fund_Info_Reporting_10__c</fullName>
    <label>Fund Info &amp; Reporting 10</label>
    <type>Email</type>
</CustomField>