force-app/main/default/objects/Account/fields/Fund_Info_Reporting_1__c.field-meta.xml
<CustomField>
    <fullName>Fund_Info_Reporting_1__c</fullName>
    <label>Fund Info &amp; Reporting 1</label>
    <type>Email</type>
</CustomField>