force-app/main/default/objects/Account/fields/Fund_Info_Reporting_2__c.field-meta.xml
<CustomField>
    <fullName>Fund_Info_Reporting_2__c</fullName>
    <label>Fund Info &amp; Reporting 2</label>
    <type>Email</type>
</CustomField>