force-app/main/default/objects/Account/fields/Investment_Status__c.field-meta.xml
<CustomField>
    <fullName>Investment_Status__c</fullName>
    <label>Investment Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Existing Investor</fullName>
            </value>
            <value>
                <fullName>Former Investor</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Prospective Investor</fullName>
            </value>
            <value>
                <fullName>Term Loan Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>