force-app/main/default/objects/Account/fields/Last_Stmt_of_Holdings_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stmt_of_Holdings_Date__c</fullName>
    <label>Last Stmt of Holdings Date</label>
    <type>Date</type>
</CustomField>