force-app/main/default/objects/Account/fields/News_Keyword_1__c.field-meta.xml
<CustomField>
    <fullName>News_Keyword_1__c</fullName>
    <label>News Keyword 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>