force-app/main/default/objects/Account/fields/News_Keyword_2__c.field-meta.xml
<CustomField>
    <fullName>News_Keyword_2__c</fullName>
    <label>News Keyword 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>