force-app/main/default/objects/Account/fields/News_Keyword_3__c.field-meta.xml
<CustomField>
    <fullName>News_Keyword_3__c</fullName>
    <label>News Keyword 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>