force-app/main/default/objects/Account/fields/of_Meetings_Held__c.field-meta.xml
<CustomField>
    <fullName>of_Meetings_Held__c</fullName>
    <label># of Meetings Held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>