force-app/main/default/objects/Account/fields/Outlook_Category__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Category__c</fullName>
    <label>Outlook Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>