force-app/main/default/objects/Account/fields/Placement_Agent__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placement Agents Named Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>