force-app/main/default/objects/Account/fields/Placement_Agent_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agent_Exclusive__c</fullName>
    <label>Placement Agent Exclusive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>