force-app/main/default/objects/Account/fields/rels__EntityId__c.field-meta.xml
<CustomField>
    <fullName>rels__EntityId__c</fullName>
    <externalId>true</externalId>
    <label>EntityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>