force-app/main/default/objects/Account/fields/rels__MatchType__c.field-meta.xml
<CustomField>
    <fullName>rels__MatchType__c</fullName>
    <label>MatchType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>