force-app/main/default/objects/Account/fields/RP_LP_Interests__c.field-meta.xml
<CustomField>
    <fullName>RP_LP_Interests__c</fullName>
    <label># RP LP Interests</label>
    <summaryFilterItems>
        <field>LP_Interest__c.Fund__c</field>
        <operation>contains</operation>
        <value>RP</value>
    </summaryFilterItems>
    <summaryForeignKey>LP_Interest__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>