force-app/main/default/objects/Account/fields/RSS_Feed_1__c.field-meta.xml
<CustomField>
    <fullName>RSS_Feed_1__c</fullName>
    <label>RSS Feed 1</label>
    <type>Url</type>
</CustomField>