force-app/main/default/objects/Account/fields/RSS_Feed_2__c.field-meta.xml
<CustomField>
    <fullName>RSS_Feed_2__c</fullName>
    <label>RSS Feed 2</label>
    <type>Url</type>
</CustomField>