force-app/main/default/objects/Account/fields/RSS_Feed_3__c.field-meta.xml
<CustomField>
    <fullName>RSS_Feed_3__c</fullName>
    <label>RSS Feed 3</label>
    <type>Url</type>
</CustomField>