force-app/main/default/objects/Account/fields/Satisfaction_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Indicator__c</fullName>
    <formula>IMAGE(CASE( Satisfaction_Level__c,&quot;Very Satisfied&quot;, &quot;/img/samples/stars_500.gif&quot;, &quot;Satisfied&quot;, &quot;/img/samples/stars_300.gif&quot;, &quot;Not Very Satisfied&quot;, &quot;/img/samples/stars_100.gif&quot;,&quot;/img/samples/stars_100.gif&quot;),&quot;No Satisfaction Level&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Custom Formula Field based on satisfaction level</inlineHelpText>
    <label>Satisfaction Indicator</label>
    <type>Text</type>
</CustomField>