force-app/main/default/objects/Account/fields/Satisfaction_Level__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Level__c</fullName>
    <inlineHelpText>Custom field to segment accounts by satisfaction level</inlineHelpText>
    <label>Satisfaction Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Not Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>