force-app/main/default/objects/Account/fields/Stmt_of_Holdings_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Stmt_of_Holdings_Frequency__c</fullName>
    <label>Stmt of Holdings Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>