force-app/main/default/objects/Account/fields/Strategic_Interest_Tier__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Interest_Tier__c</fullName>
    <label>Strategic Interest Tier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Investment_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>