force-app/main/default/objects/Account/fields/Tax_Info_Reporting_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Info_Reporting_1__c</fullName>
    <label>Tax Info &amp; Reporting 1</label>
    <type>Email</type>
</CustomField>