force-app/main/default/objects/Account/fields/Tax_Info_Reporting_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Info_Reporting_2__c</fullName>
    <label>Tax Info &amp; Reporting 2</label>
    <type>Email</type>
</CustomField>