force-app/main/default/objects/Account/fields/Tax_Info_Reporting_3__c.field-meta.xml
<CustomField>
    <fullName>Tax_Info_Reporting_3__c</fullName>
    <label>Tax Info &amp; Reporting 3</label>
    <type>Email</type>
</CustomField>