force-app/main/default/objects/Account/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U.S.</fullName>
            </value>
            <value>
                <fullName>non-US</fullName>
            </value>
            <value>
                <fullName>Tax Exempt</fullName>
            </value>
            <value>
                <fullName>US &amp; non-US</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>