force-app/main/default/objects/Account/recordTypes/Alianza_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Alianza_Account_Record_Type</fullName>
    <active>true</active>
    <label>Alianza Account Record Type</label>
</RecordType>