force-app/main/default/objects/Account/recordTypes/Master_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Account_Record_Type</fullName>
    <active>true</active>
    <label>Master Account Record Type</label>
</RecordType>