force-app/main/default/objects/Account/recordTypes/Research_Invest_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Research_Invest_Account_Record_Type</fullName>
    <active>true</active>
    <label>Research &amp; Invest. Account Record Type</label>
</RecordType>