force-app/main/default/objects/Account/listViews/Alianza_Accounts.listView-meta.xml
<ListView>
    <fullName>Alianza_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Alianza_Account_Record_Type</value>
    </filters>
    <label>Alianza Accounts</label>
    <sharedTo>
        <group>RPUsers</group>
    </sharedTo>
</ListView>