force-app/main/default/objects/Account/listViews/All_Service_Providers.listView-meta.xml
<ListView>
    <fullName>All_Service_Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Investment_Status__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Service Provider</value>
    </filters>
    <label>All Service Providers</label>

</ListView>