force-app/main/default/objects/Account/listViews/Customer_Portal_Accounts.listView-meta.xml
<ListView>
    <fullName>Customer_Portal_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_CUSTOMERSUCCESS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Customer Portal Accounts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>