force-app/main/default/objects/Account/listViews/Pharmakon_Advisors_Investors.listView-meta.xml
<ListView>
    <fullName>Pharmakon_Advisors_Investors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.IS_CUSTOMERSUCCESS</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Investment_Status__c</columns>
    <columns>Strategic_Interest_Tier__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Caprio</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Institutional Investor (II)</value>
    </filters>
    <label>Pharmakon Advisors Investors</label>
    <sharedTo>
        <role>InternalUsers</role>
        <role>PharmakonAdvisors</role>
    </sharedTo>
</ListView>