force-app/main/default/objects/Account/listViews/Template_1.listView-meta.xml
<ListView>
    <fullName>Template_1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>Template 1</label>
    <sharedTo></sharedTo>
</ListView>